--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -1638,11 +1638,11 @@ condor:
 
 local: 
     run_configs: 
-        # - 'srp-monitor'
+        - 'srp-monitor'
         - 'rds-monitor'
-        # - 'exact'
-        # - 'float32'
-        # - 'f32-srp-monitor'
+        - 'exact'
+        - 'float32'
+        - 'f32-srp-monitor'
         - 'f32-rds-monitor'
         # - 'precision-monitor'
         # - 'precision-seed'
@@ -1767,8 +1767,8 @@ local:
             'loadbalance': ['reportonly,,,,'],
             'artificialdelay': ['off'],
             'timing': ['timing'],
-            'workers': [4, 8],
-            'omp': [4, 2],
+            'workers': [4],
+            'omp': [1],
             'mpi': ['mpich3'],
             'time': [180],
             'gpu': [0],
