updates monitor arguments, adds new plot scripts

--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -1679,7 +1679,7 @@ local:
             'bunches': [1],  # 192
             'slices': [1000],
             'turns': [40000],
-            'monitor': [100],
+            'monitor': ['1,-500'],
             'seed': [0],
             'mtw': [0],
             'precision': ['single'],
@@ -1705,7 +1705,8 @@ local:
             'bunches': [1],  # 192
             'slices': [1000],
             'turns': [40000],
-            'monitor': [100],
+            'monitor': ['1,-500'],
+            # 'monitor': [100],
             'seed': [0],
             'mtw': [0],
             'precision': ['single'],
@@ -1730,7 +1731,8 @@ local:
             'bunches': [1],  # 192
             'slices': [1000],
             'turns': [40000],
-            'monitor': [100],
+            'monitor': ['1,-500'],
+            # 'monitor': [100],
             'seed': [0],
             'mtw': [0],
             'precision': ['double'],
@@ -1756,7 +1758,8 @@ local:
             'bunches': [1],  # 192
             'slices': [1000],
             'turns': [40000],
-            'monitor': [100],
+            'monitor': ['1,-500'],
+            # 'monitor': [100],
             'seed': [0],
             'mtw': [0],
             'precision': ['double'],
@@ -1783,7 +1786,8 @@ local:
             'bunches': [1],  # 192
             'slices': [1000],
             'turns': [40000],
-            'monitor': [100],
+            'monitor': ['1,-500'],
+            # 'monitor': [100],
             'seed': [0, 1, 2],
             'mtw': [0],
             'precision': ['double'],
@@ -1808,7 +1812,8 @@ local:
             'bunches': [1],  # 192
             'slices': [1000],
             'turns': [40000],
-            'monitor': [100],
+            'monitor': ['1,-500'],
+            # 'monitor': [100],
             'seed': [0],
             'mtw': [0],
             'precision': ['single'],
