--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -376,11 +376,12 @@ slurm:
         # - 'lb-tp-approx2-weak-scaling'
 
         # Intermediate stages
-        # - 'approx0-interm'
+        - 'approx0-interm'
         # - 'approx1-interm'
         # - 'approx2-interm'
-        # - 'tp-approx0-interm'
-        # - 'lb-tp-approx0-interm'
+        - 'tp-approx0-interm'
+        - 'lb-approx0-interm'
+        - 'lb-tp-approx0-interm'
         # - 'lb-tp-approx1-interm'
         # - 'lb-tp-approx2-interm'
 
@@ -441,14 +442,121 @@ slurm:
         # - f32-monitor
 
         # Approximate Weak Scaling GPU
-        - 'srp-timing-gpu' 
+        # - 'srp-timing-gpu' 
         # - 'rds-timing-gpu' 
-        - 'exact-timing-gpu'  
-        - 'float32-timing-gpu'
-        - 'f32-srp-timing-gpu'
+        # - 'exact-timing-gpu'  
+        # - 'float32-timing-gpu'
+        # - 'f32-srp-timing-gpu'
         # - 'f32-rds-timing-gpu' 
 
     configs: {
+
+        'approx0-interm': {
+            'exe': ['LHC_main.py'],
+            'particles': [1000000], #, 2000000],
+            'bunches': [96], #96],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            # 'loadbalance': ['interval,500,0.03,5,20'],
+            'loadbalance': ['reportonly,,,,'],
+            'gpu': [0],
+            'artificialdelay': ['off'],
+            'precision': ['double'],
+            'timing': ['timing'],
+            'workers': [8],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 3
+        },
+
+
+        'tp-approx0-interm': {
+            'exe': ['LHC_main.py'],
+            'particles': [1000000], #, 2000000],
+            'bunches': [96], #96],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'withtp': [1],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            # 'loadbalance': ['interval,500,0.03,5,20'],
+            'loadbalance': ['reportonly,,,,'],
+            'gpu': [0],
+            'artificialdelay': ['off'],
+            'precision': ['double'],
+            'timing': ['timing'],
+            'workers': [8],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 3
+        },
+
+        'lb-approx0-interm': {
+            'exe': ['LHC_main.py'],
+            'particles': [1000000], #, 2000000],
+            'bunches': [96], #96],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['interval,500,0.03,5,20'],
+            # 'loadbalance': ['reportonly,,,,'],
+            'gpu': [0],
+            'artificialdelay': ['off'],
+            'precision': ['double'],
+            'timing': ['timing'],
+            'workers': [8],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 3
+        },
+
+
+        'lb-tp-approx0-interm': {
+            'exe': ['LHC_main.py'],
+            'particles': [1000000], #, 2000000],
+            'bunches': [96], #96],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'withtp': [1],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['interval,500,0.03,5,20'],
+            # 'loadbalance': ['reportonly,,,,'],
+            'gpu': [0],
+            'artificialdelay': ['off'],
+            'precision': ['double'],
+            'timing': ['timing'],
+            'workers': [8],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 3
+        },
+
 
 
         # Approximate Weak-Scaling
