adds timing regions

--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -377,8 +377,8 @@ slurm:
 
         # Intermediate stages
         # - 'approx0-interm'
-        # - 'lb-approx0-interm'
-        - 'tp-approx0-interm'
+        - 'lb-approx0-interm'
+        # - 'tp-approx0-interm'
         - 'lb-tp-approx0-interm'
         # - 'approx2-interm'
         # - 'approx1-interm'
