--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -376,8 +376,8 @@ slurm:
         # - 'lb-tp-approx2-weak-scaling'
 
         # Intermediate stages
-        - 'approx0-interm'
-        - 'tp-approx0-interm'
+        # - 'approx0-interm'
+        # - 'tp-approx0-interm'
         # - 'lb-approx0-interm'
         # - 'lb-tp-approx0-interm'
         # - 'approx2-interm'
@@ -427,12 +427,12 @@ slurm:
         # - 'f32-srp-weak-scaling-timing-gpu'
         # - 'f32-rds-weak-scaling-timing-gpu' 
 
-        # - 'srp-timing-cpu' # Done 
-        # - 'rds-timing-cpu' # In progress
-        # - 'exact-timing-cpu' # In progress
-        # - 'float32-timing-cpu'
-        # - 'f32-srp-timing-cpu' 
-        # - 'f32-rds-timing-cpu' 
+        - 'srp-timing-cpu' # Done 
+        - 'rds-timing-cpu' # In progress
+        - 'exact-timing-cpu' # In progress
+        - 'float32-timing-cpu'
+        - 'f32-srp-timing-cpu' 
+        - 'f32-rds-timing-cpu' 
 
         # - f32-rds-monitor
         # - f32-srp-monitor
@@ -450,6 +450,159 @@ slurm:
         # - 'f32-rds-timing-gpu' 
 
     configs: {
+
+        # Approximate Weak-Scaling
+        'f32-srp-timing-cpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64],
+            'omp': [10],            
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+        'f32-rds-timing-cpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64],
+            'omp': [10],
+
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+        'srp-timing-cpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64],
+            'omp': [10],
+
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+        'rds-timing-cpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+        'exact-timing-cpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+        'float32-timing-cpu': {
+            'exe': ['LHC_main.py'],
+            'particles': [3000000],
+            'bunches': [192],
+            'slices': [1000],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
 
         'approx0-interm': {
             'exe': ['LHC_main.py'],
@@ -866,158 +1019,7 @@ slurm:
         },
 
 
-        # Approximate Weak-Scaling
-        'f32-srp-timing-cpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12, 24, 48, 96, 192],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32],
-            'omp': [10],            
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
 
-        'f32-rds-timing-cpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12, 24, 48, 96, 192],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32],
-            'omp': [10],
-
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 3
-        },
-
-        'srp-timing-cpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12, 24, 48, 96, 192],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32],
-            'omp': [10],
-
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'rds-timing-cpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [192],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [32],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'exact-timing-cpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [192],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [32],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'float32-timing-cpu': {
-            'exe': ['LHC_main.py'],
-            'particles': [1000000],
-            'bunches': [12, 24, 48, 96, 192],
-            'slices': [1000],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 3
-        },
 
         # Monitors
         'f32-srp-monitor': {
