adds new plot scripts

--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -394,8 +394,8 @@ slurm:
         # - 'lb-tp-approx2-weak-scaling'
 
         # Intermediate stages
-        - 'approx0-interm'
-        - 'tp-approx0-interm'
+        # - 'approx0-interm'
+        # - 'tp-approx0-interm'
         # - 'lb-approx0-interm'
         # - 'lb-tp-approx0-interm'
         # - 'approx1-interm'
@@ -438,12 +438,12 @@ slurm:
         # - 'f32-rds-timing-gpu' 
 
         # Approximate 
-        # - 'srp-timing-cpu'
-        # - 'rds-timing-cpu' 
-        # - 'exact-timing-cpu' 
-        # - 'float32-timing-cpu' 
-        # - 'f32-srp-timing-cpu'
-        # - 'f32-rds-timing-cpu'
+        - 'srp-timing-cpu'
+        - 'rds-timing-cpu' 
+        - 'exact-timing-cpu' 
+        - 'float32-timing-cpu' 
+        - 'f32-srp-timing-cpu'
+        - 'f32-rds-timing-cpu'
 
         # - f32-rds-monitor
         # - f32-srp-monitor
@@ -453,6 +453,165 @@ slurm:
         # - f32-monitor
 
     configs: {
+
+        'f32-srp-timing-cpu': {
+            'exe': ['SPS_main.py'],
+            'particles': [2000000], # 2000000],
+            'bunches': [288], #72],
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 1
+        },
+
+        'f32-rds-timing-cpu': {
+            'exe': ['SPS_main.py'],
+            'particles': [2000000], # 2000000],
+            'bunches': [288], #72],
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 1
+        },
+
+        'srp-timing-cpu': {
+            'exe': ['SPS_main.py'],
+
+            'particles': [2000000], # 2000000],
+            'bunches': [288], #72],
+
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 1
+        },
+
+        'rds-timing-cpu': {
+            'exe': ['SPS_main.py'],
+
+            'particles': [2000000], # 2000000],
+            'bunches': [288], #72],
+
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 1
+        },
+
+        'exact-timing-cpu': {
+            'exe': ['SPS_main.py'],
+
+            'particles': [2000000], # 2000000],
+            'bunches': [288], #72],
+
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 1
+        },
+
+
+        'float32-timing-cpu': {
+            'exe': ['SPS_main.py'],
+            'particles': [2000000], # 2000000],
+            'bunches': [288], #72],
+            'slices': [1408],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [60],
+            'repeats': 1
+        },
+
+
 
         'approx0-interm': {
             'exe': ['SPS_main.py'],
@@ -722,168 +881,6 @@ slurm:
             'time': [60],
 
             'repeats': 3
-        },
-
-        'f32-srp-timing-cpu': {
-            'exe': ['SPS_main.py'],
-            'particles': [1000000], # 2000000],
-            'bunches': [18, 36, 72, 144, 288], #72],
-
-            'slices': [1408],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32], #16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'f32-rds-timing-cpu': {
-            'exe': ['SPS_main.py'],
-
-            'particles': [1000000], # 2000000],
-            'bunches': [18, 36, 72, 144, 288], #72],
-
-            'slices': [1408],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32], #16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'srp-timing-cpu': {
-            'exe': ['SPS_main.py'],
-
-            'particles': [1000000], # 2000000],
-            'bunches': [18, 36, 72, 144, 288], #72],
-
-            'slices': [1408],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32], #16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'rds-timing-cpu': {
-            'exe': ['SPS_main.py'],
-
-            'particles': [1000000], # 2000000],
-            'bunches': [18, 36, 72, 144, 288], #72],
-
-            'slices': [1408],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32], #16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'exact-timing-cpu': {
-            'exe': ['SPS_main.py'],
-
-            'particles': [1000000], # 2000000],
-            'bunches': [18, 36, 72, 144, 288], #72],
-
-            'slices': [1408],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32], #16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-
-        'float32-timing-cpu': {
-            'exe': ['SPS_main.py'],
-
-            'particles': [1000000], # 2000000],
-            'bunches': [18, 36, 72, 144, 288], #72],
-
-            'slices': [1408],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [0],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32], #16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
         },
 
 
