--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -400,10 +400,10 @@ slurm:
         # - 'lb-tp-approx2-weak-scaling'
 
         # Intermediate stages
-        - 'approx0-interm'
+        # - 'approx0-interm'
         # - 'approx1-interm'
         # - 'approx2-interm'
-        - 'tp-approx0-interm'
+        # - 'tp-approx0-interm'
         # - 'lb-approx0-interm'
         # - 'lb-tp-approx0-interm'
         # - 'lb-tp-approx1-interm'
@@ -444,17 +444,174 @@ slurm:
         # - 'f32-rds-timing-gpu' # DONE
 
         # Approximate CPU
-        # - 'srp-timing-cpu' DONE
-        # - 'rds-timing-cpu'  DONE
-        # - 'exact-timing-cpu' # DONE
-        # - 'float32-timing-cpu'  DONE
-        # - 'f32-srp-timing-cpu' 
-        # - 'f32-rds-timing-cpu' 
+        - 'srp-timing-cpu' DONE
+        - 'rds-timing-cpu'  DONE
+        - 'exact-timing-cpu' # DONE
+        - 'float32-timing-cpu'  DONE
+        - 'f32-srp-timing-cpu' 
+        - 'f32-rds-timing-cpu' 
 
 
 
 
     configs: {
+
+        # Approximate
+        'f32-srp-timing-cpu': {
+            'exe': ['PS_main.py'],
+            'particles': [32000000],
+            'bunches': [21],  # 96
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #, 16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+
+        'f32-rds-timing-cpu': {
+            'exe': ['PS_main.py'],
+            'particles': [32000000], #, 400000],
+            'bunches': [21],  # 96
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #, 16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+
+        'srp-timing-cpu': {
+            'exe': ['PS_main.py'],
+            'particles': [32000000],
+            'bunches': [21],  # 96
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #, 16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+
+        'rds-timing-cpu': {
+            'exe': ['PS_main.py'],
+            'particles': [32000000], #, 400000],
+            'bunches': [21],  # 96
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #, 16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+        'exact-timing-cpu': {
+            'exe': ['PS_main.py'],
+            'particles': [32000000], #, 400000],
+            'bunches': [21],  # 96
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [32], #, 16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+
+        'float32-timing-cpu': {
+            'exe': ['PS_main.py'],
+            'particles': [32000000],
+            'bunches': [21],  # 96
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [0],
+            'workers': [64], #, 16],
+            'omp': [10],
+            'mpi': ['mvapich2'],
+            'time': [30],
+            'repeats': 1
+        },
+
+
 
         'approx0-interm': {
             'exe': ['PS_main.py'],
@@ -726,170 +883,6 @@ slurm:
             'time': [60],
 
             'repeats': 3
-        },
-
-        # Approximate
-        'f32-srp-timing-cpu': {
-            'exe': ['PS_main.py'],
-            'particles': [1000000, 4000000, 4000000, 8000000, 16000000],
-            'bunches': [21],  # 96
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-            'workers': [2, 4, 8, 16, 32], #, 16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 3
-        },
-
-
-        'f32-rds-timing-cpu': {
-            'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000], #, 400000],
-            'bunches': [21],  # 96
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-
-            'workers': [2, 4, 8, 16, 32], #, 16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 3
-        },
-
-
-        'srp-timing-cpu': {
-            'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000],
-            'bunches': [21],  # 96
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
-            'approx': [1],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-
-            'workers': [2, 4, 8, 16, 32], #, 16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 1
-        },
-
-
-        'rds-timing-cpu': {
-            'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000], #, 400000],
-            'bunches': [21],  # 96
-
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [2],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-
-            'workers': [2, 4, 8, 16, 32], #, 16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-        'exact-timing-cpu': {
-            'exe': ['PS_main.py'],
-            'particles': [16000000], #, 400000],
-            'bunches': [21],  # 96
-
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['double'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-
-            #'workers': [1, 2, 4],
-            'workers': [32], #, 16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
-        },
-
-
-        'float32-timing-cpu': {
-            'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000],
-            'bunches': [21],  # 96
-
-            'slices': [256],
-            'turns': [10000],
-            'monitor': [0],
-            'seed': [0],
-            'mtw': [50],
-            'precision': ['single'],
-            'withtp': [0],
-            'reduce': [1],
-            'approx': [0],
-            'log': [1],
-            'loadbalance': ['reportonly,,,,'],
-            'artificialdelay': ['off'],
-            'timing': ['timing'],
-            'gpu': [0],
-
-            'workers': [2, 4, 8, 16, 32], #, 16],
-            'omp': [10],
-            'mpi': ['openmpi4'],
-            'time': [60],
-            'repeats': 2
         },
 
 
