--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -444,12 +444,12 @@ slurm:
         # - 'f32-rds-timing-gpu' # DONE
 
         # Approximate CPU
-        - 'srp-timing-cpu' #DONE
-        - 'rds-timing-cpu'  #DONE
+        # - 'srp-timing-cpu' #DONE
+        # - 'rds-timing-cpu'  #DONE
         - 'exact-timing-cpu' # DONE
-        - 'float32-timing-cpu'  #DONE
-        - 'f32-srp-timing-cpu' 
-        - 'f32-rds-timing-cpu' 
+        # - 'float32-timing-cpu'  #DONE
+        # - 'f32-srp-timing-cpu' 
+        # - 'f32-rds-timing-cpu' 
 
 
 
@@ -579,7 +579,7 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [0],
-            'workers': [32], #, 16],
+            'workers': [2], #, 16],
             'omp': [10],
             'mpi': ['mvapich2'],
             'time': [120],
